<resources>
    <string name="app_name">Github App</string>
    <string name="title_search">Search</string>
    <string name="label_sort_by">Sort:</string>
    <string name="message_search_repositories">Click the search icon to search for repositories.</string>
    <string name="content_description_github_logo">Github logo</string>
    <string name="content_description_repository_owner_thumbnail">Repository owner thumbnail</string>
    <string name="label_watchers">Watchers:</string>
    <string name="label_issues">Issues:</string>
    <string name="label_forks">Forks:</string>
    <string name="title_user_details">User details</string>
    <string name="title_repository_details">Repository details</string>
    <string name="hint_search_repositories">Search repositories…</string>
    <string name="label_results_count">%d results</string>
    <string name="message_input_query">Enter your query and submit to get search results.</string>
    <string name="message_no_results">No results.</string>
    <string name="message_data_load_failed">Unable to load data. Check your network connection or try again in a few moments.</string>
    <string name="item_sort_by_stars_asc">Fewest stars</string>
    <string name="item_sort_by_stars_desc">Most stars</string>
    <string name="item_sort_by_forks_asc">Fewest forks</string>
    <string name="item_sort_by_forks_desc">Most forks</string>
    <string name="item_sort_by_updated_desc">Recently updated</string>
    <string name="item_sort_by_updated_asc">Least recently updated</string>
    <string name="label_programming_language">Programming language:</string>
    <string name="label_date_created">Date created:</string>
    <string name="label_date_modified">Last modified:</string>
    <string name="button_view_in_browser">View in browser</string>
    <string name="label_stars">Stars:</string>
    <string name="label_owner">Owner</string>
    <string name="label_name">Name:</string>
    <string name="label_company">Company:</string>
    <string name="label_location">Location:</string>
    <string name="label_public_repos">Public repositories:</string>
    <string name="label_followers">Followers:</string>
    <string name="label_following">Following:</string>
    <string name="message_repository_unavailable">Unable to load repository data. Check your network connection.</string>
    <string name="message_user_unavailable">Unable to load user data. Check your network connection.</string>
    <string name="content_description_user_thumbnail">User thumbnail</string>
</resources>
