<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.activity.MainActivity">

    <include
            android:id="@+id/layout_search_results"
            layout="@layout/content_main"
    />

    <LinearLayout
            android:id="@+id/layout_initial_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:id="@+id/image_github_logo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="20dp"
                android:src="@drawable/image_github_logo"
                android:contentDescription="@string/content_description_github_logo"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_search_repositories"
                android:textStyle="bold"
        />

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress_bar_loading_repos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
    />

    <TextView
            android:id="@+id/text_enter_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/message_input_query"
            android:visibility="gone"
            android:textStyle="bold"
    />

    <TextView
            android:id="@+id/text_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/message_no_results"
            android:visibility="gone"
            android:textStyle="bold"
    />

</androidx.constraintlayout.widget.ConstraintLayout>