<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.activity.RepositoryDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_repository_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <TextView
                android:id="@+id/text_repository_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Repository name"
        />

        <TextView
                android:id="@+id/text_repository_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_repository_name"
                android:paddingBottom="15dp"
                tools:text="Repository description"
        />

        <TextView
                android:id="@+id/text_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_repository_description"
                android:text="@string/label_watchers"
        />

        <TextView
                android:id="@+id/text_watchers_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_watchers"
                app:layout_constraintTop_toTopOf="@id/text_watchers"
                android:layout_marginStart="5dp"
                tools:text="22"
        />

        <TextView
                android:id="@+id/text_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_watchers"
                android:text="@string/label_stars"
        />

        <TextView
                android:id="@+id/text_stars_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_stars"
                app:layout_constraintTop_toTopOf="@id/text_stars"
                android:layout_marginStart="5dp"
                tools:text="12"
        />

        <TextView
                android:id="@+id/text_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_stars"
                android:text="@string/label_forks"
        />

        <TextView
                android:id="@+id/text_forks_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_forks"
                app:layout_constraintTop_toTopOf="@id/text_forks"
                android:layout_marginStart="5dp"
                tools:text="55"
        />

        <TextView
                android:id="@+id/text_issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_forks"
                android:text="@string/label_issues"
        />

        <TextView
                android:id="@+id/text_issues_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_issues"
                app:layout_constraintTop_toTopOf="@id/text_issues"
                android:layout_marginStart="5dp"
                tools:text="55"
        />

        <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_issues"
                android:text="@string/label_programming_language"
        />

        <TextView
                android:id="@+id/text_language_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_language"
                app:layout_constraintTop_toTopOf="@id/text_language"
                android:layout_marginStart="5dp"
                tools:text="Kotlin"
        />

        <TextView
                android:id="@+id/text_date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_language"
                android:text="@string/label_date_created"
        />

        <TextView
                android:id="@+id/text_date_created_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_date_created"
                app:layout_constraintTop_toTopOf="@id/text_date_created"
                android:layout_marginStart="5dp"
                tools:text="25/05/2017"
        />

        <TextView
                android:id="@+id/text_date_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_watchers"
                app:layout_constraintTop_toBottomOf="@id/text_date_created"
                android:text="@string/label_date_modified"
        />

        <TextView
                android:id="@+id/text_date_modified_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/text_date_modified"
                app:layout_constraintTop_toTopOf="@id/text_date_modified"
                android:layout_marginStart="5dp"
                tools:text="25/05/2017"
        />

        <Button
                android:id="@+id/button_view_in_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date_modified"
                android:text="@string/button_view_in_browser"
        />

        <TextView
                android:id="@+id/text_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_view_in_browser"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/label_owner"
        />

        <ImageView
                android:id="@+id/image_owner_thumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_owner"
                tools:src="@drawable/image_github_logo"
                android:contentDescription="@string/content_description_repository_owner_thumbnail"
        />

        <TextView
                android:id="@+id/text_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_owner_thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_owner_thumbnail"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="20dp"
                tools:text="Owner name"
        />

        <TextView
                android:id="@+id/text_owner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_owner_name"
                app:layout_constraintTop_toBottomOf="@id/text_owner_name"
                tools:text="Organization"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
